@@ -1,3 +1,8 @@
+1998-03-20  Tanaka Akira  <akr@jaist.ac.jp>
+
+	* eword-decode.el (eword-decode-string): Treat undecodable
+	encoded-words.
+
 1998-03-19  Tanaka Akira  <akr@jaist.ac.jp>
 
 	* eword-decode.el (eword-decode-region): Treat undecodable
